--- a/css/login.css
+++ b/css/login.css
@@ -464,3 +464,61 @@ a {
         font-size: 0.8rem;
     }
 }
+.formulario__login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  width: 320px;
+  margin: auto;
+}
+
+.formulario__login input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.formulario__login button {
+  background: linear-gradient(90deg, #7f56d9, #9c27b0);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.formulario__login button:hover {
+  background: linear-gradient(90deg, #5a2d82, #8e24aa);
+}
+
+.no-cuenta-text {
+  margin-top: 10px;
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.btn__registrarse {
+  margin-top: 6px;
+  display: inline-block;
+  padding: 10px 20px;
+  background: transparent;
+  color: #7f56d9;
+  border: 2px solid #7f56d9;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.btn__registrarse:hover {
+  background: #7f56d9;
+  color: white;
+}
