--- a/css/login.css
+++ b/css/login.css
@@ -464,3 +464,26 @@ select:focus {
         font-size: 0.8rem;
     }
 }
+
+
+.formulario__register select {
+    width: 100%;
+    margin-top: 5px;
+    padding: 15px;
+    border: none;
+    background: #F2F2F2;
+    font-size: 14px;
+    outline: none;
+    border-radius: 10px;
+    transition: all 300ms;
+}
+
+.formulario__register select:focus {
+    background: #E8F4FD;
+    border: 2px solid #46A2FD;
+    transform: scale(1.02);
+}
+
+.formulario__register select option {
+    color: #333;
+}
