--- a/css/login.css
+++ b/css/login.css
@@ -487,3 +487,29 @@ select:focus {
 .formulario__register select option {
     color: #333;
 }
+.select__registro {
+    width: 100%;
+    margin-top: 5px;
+    padding: 15px;
+    border: none;
+    background: #F2F2F2;
+    font-size: 14px;
+    outline: none;
+    border-radius: 10px;
+    transition: all 300ms;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #333;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.select__registro:focus {
+    background: #E8F4FD;
+    border: 2px solid #46A2FD;
+    transform: scale(1.02);
+}
+
+.select__registro option {
+    color: #333;
+}
